update with some changes

--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
                     <h1 class="hero-title">
                         <span class="title-line">Hi, I'm</span>
                         <span class="title-line gradient-text">Ruchit Singh</span>
-                        <span class="title-line subtitle">I teach computers to share nicely</span>
                     </h1>
                     <p class="hero-description">
-                        MSc student at Edinburgh making LLMs play together without hogging all the GPU memory. 
+                        MSc CompSci at Edinburgh making LLMs play together without hogging all the GPU memory. 
                         Former platform optimizer who convinced systems to cost 40% less (they weren't happy about it, 
                         but someone had to do it). Currently researching virtual memory like it's 1995, but for GPUs.
                     </p>
@@ -81,7 +80,7 @@
                         </div>
                         <div class="stat-item">
                             <div class="stat-value">∞</div>
-                            <div class="stat-label">Coffee Consumed</div>
+                            <div class="stat-label">Coffee/Redbull/Monster/Diet Coke Consumed</div>
                         </div>
                     </div>
                 </div>
@@ -161,12 +160,6 @@
                 </div>
             </div>
         </div>
-        <div class="scroll-indicator">
-            <span>Scroll for the good stuff</span>
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                <path d="M12 5v14M5 12l7 7 7-7" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-            </svg>
-        </div>
     </section>
 
     <!-- About Section with Isometric Skills -->
@@ -189,9 +182,9 @@
                         distributed systems can cost 40% less. Who knew?
                     </p>
                     <p>
-                        When I'm not teaching machines to play nice, I'm probably composing music with algorithms 
-                        (because normal music is too mainstream) or writing docs that people might actually read 
-                        (the real unicorn).
+                        When I'm not teaching machines to play nice, I'm shredding on electric guitar. Huge fanatic of 
+                        metalcore, heavy metal, and nu-metal – because sometimes you need breakdowns as aggressive as 
+                        your optimization strategies.
                     </p>
                 </div>
                 <div class="skills-isometric" data-scroll>
@@ -523,12 +516,14 @@
                     <h2 class="section-title">Get In Touch</h2>
                 </div>
                 <p class="contact-text">
-                    Open to: Backend/systems roles, research collabs, and spirited debates about whether Paxos or Raft is superior 
-                    (spoiler: they both have their moments). If you're working on distributed systems, GPU optimization, or just want 
+                    Open to: Backend/Systems roles, 
+                    Research Collaborations,
+                    Spirited debates about whether Paxos or Raft is superior (spoiler: they both have their moments). 
+                    If you're working on distributed systems, GPU optimization, or just want 
                     to chat about why memory management is actually fascinating, hit me up!
                 </p>
                 <div class="contact-methods">
-                    <a href="mailto:your.email@ed.ac.uk" class="contact-method">
+                    <a href="rt13sh@gmail.com" class="contact-method">
                         <div class="method-icon">
                             <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
@@ -537,7 +532,7 @@
                         </div>
                         <span class="method-label">Email</span>
                     </a>
-                    <a href="https://github.com/rtsh" class="contact-method" target="_blank">
+                    <a href="https://github.com/rtsh13" class="contact-method" target="_blank">
                         <div class="method-icon">
                             <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                 <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"/>
