--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                     </h1>
                     <p class="hero-description">
                         Master's student pursuing Computer Science at University of Edinburgh and a huge distributed systems fanatic. 
-                        Former platform optimizer who convinced systems to cost 40% less (they weren't happy about it, 
+                        Former platform optimizer who convinced systems to cost (proceeds to insert a large arbitiary number)% less (they weren't happy about it, 
                         but someone had to do it). Currently researching GPU virtual memory management for multi-model LLM serving.
                     </p>
                     <div class="hero-actions">
@@ -326,12 +326,12 @@
                     </div>
                     <div class="hero-stats">
                         <div class="stat-item">
-                            <div class="stat-value">40%</div>
+                            <div class="stat-value">>40%</div>
                             <div class="stat-label">Cost Vaporized</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-value">3+</div>
-                            <div class="stat-label">Years Debugging</div>
+                            <div class="stat-value">4+</div>
+                            <div class="stat-label">Years Debugging and Losing Hair</div>
                         </div>
                         <div class="stat-item">
                             <div class="stat-value">∞</div>
